99-Legacy from HV/DevelopperToolKit/04-GeoServer/Kubernetes/Hyperviseur-Deployment_Geoserver.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hyp-app-geo-deploy
  labels:
    app: hyp-app-geo
    # role: ${TARGET_ROLE} -> tbd pour du blue-green Deployment
    # env: prod
    # G5%s1C
spec:
  # The number of Pods
  replicas: 1
  # The number of old ReplicaSets to retain to allow rollback
  revisionHistoryLimit: 2
  template:
    metadata:
      name: hyp-app-geo-pod
      labels:
        app: hyp-app-geo
    spec:
      containers:
      - name: hyp-geo-container
        image: registry.eu-de.bluemix.net/hyperviseurnspc/geoserver:2.14.3
        ports:
        - name: http-port
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/geoserver/data_dir
          name: hyp-app-geo-data
      imagePullSecrets:
      - name: bluemix-hypnspdev-secret
      volumes:
      - name: hyp-app-geo-data
        persistentVolumeClaim:
          claimName: hyp-app-geo-pvc-dev
